added rating options

--- a/neighbours/templates/index.html
+++ b/neighbours/templates/index.html
@@ -50,7 +50,34 @@
     </div>
   
   </div>
+</div>
 
+
+<div class="col-md-4">
+<!-- Card -->
+<div class="card booking-card">
+
+<!-- Card image -->
+<div class="view overlay">
+<img class="card-img-top" src="https://www.yourprovidencehealth.com/Content/Uploads/Providence%20Hospitals/images/Building%20Facilities%20Photos/Providence%20Health%20downtown%20hospital%20at%20night.jpg" alt="Card image cap">
+<a href="#!">
+<div class="mask rgba-white-slight"></div>
+</a>
+</div>
+
+<!-- Card content -->
+<div class="card-body">
+
+<!-- Title -->
+<h4 class="card-title font-weight-bold"><a>Hood Hospitals</a></h4>
+<!-- Data -->
+<ul class="list-unstyled list-inline rating mb-0">
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"> </i></li>
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+<li class="list-inline-item"><i class="fas fa-star-half-alt amber-text"></i></li>
+<li class="list-inline-item"><p class="text-muted">4.5 (413)</p></li>
 
 
 
