--- a/neighbours/templates/index.html
+++ b/neighbours/templates/index.html
@@ -79,6 +79,29 @@
 <li class="list-inline-item"><i class="fas fa-star-half-alt amber-text"></i></li>
 <li class="list-inline-item"><p class="text-muted">4.5 (413)</p></li>
 
+</ul>
+<p class="lead"><strong>Hospitals Near You</strong></p>
+<ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
+  <li class="list-inline-item mr-0">
+    <div class="chip mr-0">Huduma</div>
+  </li>
+  <li class="list-inline-item mr-0">
+    <div class="chip mr-0">Care</div>
+  </li>
+  <li class="list-inline-item mr-0">
+    <div class="chip mr-0">Tibu</div>
+  </li>
+  <li class="list-inline-item mr-0">
+    <div class="chip mr-0">Jenga</div>
+  </li>
+</ul>
+
+</div>
+
+</div>
+<!-- Card -->
+  </div>
+
 
 
 
