--- a/neighbours/templates/index.html
+++ b/neighbours/templates/index.html
@@ -102,6 +102,52 @@
 <!-- Card -->
   </div>
 
+  <div class="col-md-4">
+    <!-- Card -->
+<div class="card booking-card">
+
+<!-- Card image -->
+<div class="view overlay">
+<img class="card-img-top" src="https://www.bournemouthecho.co.uk/resources/images/6768197.jpg?display=1&htype=0&type=responsive-gallery" alt="Card image cap">
+<a href="#!">
+<div class="mask rgba-white-slight"></div>
+</a>
+</div>
+
+<!-- Card content -->
+<div class="card-body">
+
+<!-- Title -->
+<h4 class="card-title font-weight-bold"><a>Hood Police</a></h4>
+<!-- Data -->
+<ul class="list-unstyled list-inline rating mb-0">
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"> </i></li>
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+<li class="list-inline-item"><i class="fas fa-star-half-alt amber-text"></i></li>
+<li class="list-inline-item"><p class="text-muted">4.5 (413)</p></li>
+</ul>
+<p class="lead"><strong>Station Near you</strong></p>
+<ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
+<li class="list-inline-item mr-0">
+  <div class="chip mr-0">Linzi</div>
+</li>
+<li class="list-inline-item mr-0">
+  <div class="chip mr-0">Ferrari</div>
+</li>
+<li class="list-inline-item mr-0">
+  <div class="chip mr-0">Sarona</div>
+</li>
+<li class="list-inline-item mr-0">
+  <div class="chip mr-0">Amani</div>
+</li>
+</ul>
+
+</div>
+
+</div>
+
 
 
 
