--- a/neighbours/templates/london.html
+++ b/neighbours/templates/london.html
@@ -17,4 +17,34 @@
         <div class="mask rgba-white-slight"></div>
       </a>
     </div>
+    <div class="card-body">
   
+      <!-- Title -->
+      <h4 class="card-title font-weight-bold"><a>Hood Entertainment</a></h4>
+      <!-- Data -->
+      <ul class="list-unstyled list-inline rating mb-0">
+        <li class="list-inline-item mr-0"><i class="fas fa-star amber-text"> </i></li>
+        <li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+        <li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+        <li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+        <li class="list-inline-item"><i class="fas fa-star-half-alt amber-text"></i></li>
+        <li class="list-inline-item"><p class="text-muted">4.5 (413)</p></li>
+      </ul>
+      <p class="lead"><strong>Entertainment near you</strong></p>
+      <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
+        <li class="list-inline-item mr-0">
+          <div class="chip mr-0">kwetu</div>
+        </li>
+        <li class="list-inline-item mr-0">
+          <div class="chip mr-0">sisi</div>
+        </li>
+        <li class="list-inline-item mr-0">
+          <div class="chip mr-0">sherehe</div>
+        </li>
+        <li class="list-inline-item mr-0">
+          <div class="chip mr-0">jibambe</div>
+        </li>
+      </ul>
+    </div>
+  
+  </div>
