--- a/neighbours/templates/london.html
+++ b/neighbours/templates/london.html
@@ -48,3 +48,51 @@
     </div>
   
   </div>
+</div>
+
+
+<div class="col-md-4">
+<!-- Card -->
+<div class="card booking-card">
+
+<!-- Card image -->
+<div class="view overlay">
+<img class="card-img-top" src="https://heidicohen.com/wp-content/uploads/Hospital_Emergency_Room-300x199.jpg" alt="Card image cap">
+<a href="#!">
+<div class="mask rgba-white-slight"></div>
+</a>
+</div>
+
+<!-- Card content -->
+<div class="card-body">
+
+<!-- Title -->
+<h4 class="card-title font-weight-bold"><a>Hood Hospitals</a></h4>
+<!-- Data -->
+<ul class="list-unstyled list-inline rating mb-0">
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"> </i></li>
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+<li class="list-inline-item mr-0"><i class="fas fa-star amber-text"></i></li>
+<li class="list-inline-item"><i class="fas fa-star-half-alt amber-text"></i></li>
+<li class="list-inline-item"><p class="text-muted">4.5 (413)</p></li>
+</ul>
+<p class="lead"><strong>Hospitals Near You</strong></p>
+<ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
+<li class="list-inline-item mr-0">
+  <div class="chip mr-0">Huduma</div>
+</li>
+<li class="list-inline-item mr-0">
+  <div class="chip mr-0">Care</div>
+</li>
+<li class="list-inline-item mr-0">
+  <div class="chip mr-0">Tibu</div>
+</li>
+<li class="list-inline-item mr-0">
+  <div class="chip mr-0">Jenga</div>
+</li>
+</ul>
+
+</div>
+
+</div>
