--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,15 +8,42 @@ body {
     font-family: 'Raleway';
     font-size: 20px;
     /* text-transform: uppercase; */
-    background: rgb(194, 181, 181);
+    background: rgb(230, 215, 215);
 }
 
 #navMain .navbar-toggler {
     font-size: 10px;
     padding: 15px;
-    color: rgb(206, 183, 183);
+    color: rgb(223, 213, 213);
 }
 #navMain a {
-    color: rgb(233, 221, 221);
+    color: rgb(214, 194, 194);
     text-decoration: none;
 }
+
+#navMain .navbar-nav .nav-item:active,
+#navMain .navbar-nav .nav-item:focus {
+    outline: none;
+    background-color: rgb(112, 101, 101);
+}
+
+@media (min-width: 992px) {
+    #navMain {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        -webkit-transition: padding-top 0.5s ease-in-out, padding-bottom 0.5s;
+        -moz-transition: padding-top 0.5s ease-in-out, padding-bottom 0.5s;
+        transition: padding-top 0.5s ease-in-out, padding-bottom 0.5s;
+        letter-spacing: 1px;
+        background: rgb(231, 220, 220);
+        border-bottom: 1px solid #e6e6e6;
+        /* height: 70px; */
+    }
+    #navMain .nav-link.active {
+        outline: none;
+        background-color: rgb(218, 206, 206);
+    }
+    #navMain .nav-link.active:hover {
+        color: rgb(230, 200, 200);
+        background-color: rgba(167, 165, 155, 0.637)
+    }
