--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -47,3 +47,29 @@ body {
         color: rgb(230, 200, 200);
         background-color: rgba(167, 165, 155, 0.637)
     }
+    #navMain.navbar-shrink {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        background: rgb(255, 255, 255);
+        border-bottom: 1px solid #e6e6e6;
+    }
+    #navMain.navbar-shrink a {
+        color: rgba(26, 18, 18, 0.973);
+    }
+}
+.nav-search {
+    display: flex;
+    justify-content: center;
+}
+
+a:hover {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.home-images {
+    background-color: rgb(241, 222, 222);
+    border: 1px solid #e6e6e6;
+    border-radius: 1px;
+    margin: 0 0 10px;
+}
