--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -73,3 +73,46 @@ a:hover {
     border-radius: 1px;
     margin: 0 0 10px;
 }
+.home-images img {
+    width: 100%;
+    border-top: 1px solid #ecd4d4;
+    border-bottom: 1px solid #f1dbdb;
+}
+
+.top {
+    padding-top: 6rem;
+}
+
+.top-section {
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+}
+
+.top-section img {
+    width: 10rem;
+    height: 10rem;
+}
+
+.profile-image {
+    display: flex;
+    justify-content: center;
+}
+profile-image img {
+    border-radius: 10rem;
+}
+
+.user-images img {
+    width: 100%;
+    /* height: inherit; */
+}
+
+.images {
+    padding: 5px;
+    height: 33.3%;
+    overflow: hidden;
+}
+
+.username {
+    font-family: 'Raleway';
+    font-size: 35px;
+}
