--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -116,3 +116,87 @@ profile-image img {
     font-family: 'Raleway';
     font-size: 35px;
 }
+.btn-edit {
+    color: rgb(0, 0, 0);
+    background-color: #ebebeb;
+    border-color: #000000;
+    margin-bottom: 5px;
+}
+
+.fa {
+    color: black;
+}
+
+.edit-profile {
+    background-color: #fff;
+    border: 1px solid #e6e6e6;
+    border-radius: 1px;
+    margin: 0 0 10px;
+    padding: 10px 0;
+}
+
+.edit-areas {
+    border-right: 1px solid #e6e6e6;
+}
+
+.modal-dialog {
+    max-width: 300px;
+}
+
+.modal-body {
+    padding: 0;
+}
+
+.modal-body a {
+    cursor: pointer;
+    color: black;
+}
+
+.modal-body a:hover {
+    text-decoration: none;
+}
+
+.home-text {
+    padding-left: 1rem;
+    padding-top: 1rem;
+}
+
+.home-list {
+    padding-left: 1rem;
+}
+.search-results{
+    text-align: center;
+    padding-bottom: 1rem;
+    margin: 1rem;
+}
+.search-results img{
+    width: 180px;
+    height: 180px;
+    border-radius: 20rem;
+    margin: 2rem 0;
+}
+p{
+    font-family: 'Montserrat'
+}
+.font1{
+    font-family: 'Catamaran';
+}
+.font2{
+    font-family: 'Julius Sans One';
+}
+@media only screen and (max-width:800px) {
+    /* For tablets: */
+    .main {
+      width: 80%;
+      padding: 0;
+    }
+    .right {
+      width: 100%;
+    }
+  }
+  @media only screen and (max-width:500px) {
+    /* For mobile phones: */
+    .menu, .main, .right {
+      width: 100%;
+    }
+  }
