deployment to heroku

--- a/neighbours/templates/home.html
+++ b/neighbours/templates/home.html
@@ -262,7 +262,7 @@
             </form>
 
             <div class="text-center text-md-left">
-              <a href="registration/signup" class="btn btn-primary" >Send</a>
+              <a href="{% url 'signup' %}" class="btn btn-primary" >Send</a>
             </div>
             <div class="status"></div>
           </div>
