--- a/neighbours/templates/image.html
+++ b/neighbours/templates/image.html
@@ -44,7 +44,7 @@
                     {% empty %}
                     <div class="row">
                         <div class="col-md-10">
-                            <h3>There are no comments at thapplicatione moment</h3>
+                            <h3>There are no comments at the  moment</h3>
                         </div>
                     </div>
                     {% endfor %}
