--- a/neighbours/templates/registration/signup.html
+++ b/neighbours/templates/registration/signup.html
@@ -10,7 +10,7 @@
     <!-- empty div -->
     <div class='row'>
        <div class='col-md-5' style="margin-left: 400px;">
-       <div class="panel-body card register-card" style="background-image:url('https://images.pexels.com/photos/132037/pexels-photo-132037.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');background-size:cover;background-repeat:no-repeat;">
+       <div class="panel-body card register-card" style="background-image:url('https://signup.hive.io/images/members.svg');background-size:cover;background-repeat:no-repeat;">
            <div style="color:black;">
            <h2 class='header' style="color: white;font-family: Billabong, cursive;">City-Hood<h2>
            <h5 style='color:black;text-align:center;font-size:50px;font-family: Billabong, cursive;'><strong>Sign up</strong></h5>
